# chatapp-v0.1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
include/core/: Chat.h  Message.h  User.h
include/ui/: ChatWidget.h  LoginWidget.h  MainMenuWidget.h  MainWindow.h  RegistrationWidget.h
include/utils/: DatabaseManager.h
src/: main.cpp
src/core/: Chat.cpp  Message.cpp  User.cpp
src/ui/: ChatWidget.cpp  LoginWidget.cpp  MainMenuWidget.cpp  MainWindow.cpp  RegistrationWidget.cpp
src/utils/: DatabaseManager.cpp
